WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212947
[Win] ComplexTextControllerUniscribe: Retry ScriptShape with SCRIPT_UNDEFINED if it failed as USP_E_SCRIPT_NOT_IN_FONT
https://bugs.webkit.org/show_bug.cgi?id=212947
Summary
[Win] ComplexTextControllerUniscribe: Retry ScriptShape with SCRIPT_UNDEFINED...
Fujii Hironori
Reported
2020-06-08 19:13:36 PDT
[Win] ComplexTextControllerUniscribe: Retry ScriptShape with SCRIPT_UNDEFINED if it failed as USP_E_SCRIPT_NOT_IN_FONT Displaying Text with Uniscribe
https://docs.microsoft.com/en-us/windows/win32/intl/displaying-text-with-uniscribe
> 7. If ScriptShape returns the code USP_E_SCRIPT_NOT_IN_FONT or > S_OK with the output containing missing glyphs, select characters > from a different font. Either substitute another font or disable > shaping by setting the eScript member of the SCRIPT_ANALYSIS > structure passed to ScriptShape to SCRIPT_UNDEFINED. For more > information, see Using Font Fallback.
Attachments
Patch
(2.43 KB, patch)
2020-06-08 19:25 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-06-08 19:25:58 PDT
Created
attachment 401410
[details]
Patch
Fujii Hironori
Comment 2
2020-06-08 19:27:21 PDT
It's easy to test this issue by opening a Tibetan page at the moment because there is another bug in fallback font selection for Tibetan characters (
Bug 212688
). However, if the bug is fixed, I don't know how can this issue be tested.
Fujii Hironori
Comment 3
2020-06-09 12:54:22 PDT
Comment on
attachment 401410
[details]
Patch Clearing flags on attachment: 401410 Committed
r262804
: <
https://trac.webkit.org/changeset/262804
>
Fujii Hironori
Comment 4
2020-06-09 12:54:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-06-09 12:55:18 PDT
<
rdar://problem/64175943
>
Radar WebKit Bug Importer
Comment 6
2020-06-09 12:55:20 PDT
<
rdar://problem/64175945
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug